--- a/portfolio.html
+++ b/portfolio.html
@@ -365,6 +365,25 @@
               </li>
             </ul>
           </div>
+          <div class="footer-form-container">
+            <h3 class="footer-social-title">Підпишіться на розсилку</h3>
+            <p class="title-subscribe"></p>
+            <div class="footer-form-fild">
+              <label for="footer-subscribe" class="footer-form-lable"></label>
+              <input
+                id="footer-subscribe"
+                type="email"
+                name="email"
+                class="footer-subscribe"
+                placeholder="E-mail"
+              />
+              <button type="submit" class="button button-footer">
+                <svg class="button-footer-icon" width="24px" height="24px">
+                  <use href="./images/icons.svg#icon-icon-send"></use></svg
+                >Підписатися
+              </button>
+            </div>
+          </div>
         </div>
       </div>
     </footer>
