--- a/index.html
+++ b/index.html
@@ -466,8 +466,9 @@
               />
               <button type="submit" class="button button-footer">
                 <svg class="button-footer-icon" width="24px" height="24px">
-                  <use href="./images/icons.svg#icon-icon-send"></use></svg
-                >Підписатися
+                  <use href="./images/icons.svg#icon-icon-send"></use>
+                </svg>
+                Підписатися
               </button>
             </div>
           </div>
@@ -477,7 +478,9 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button data-modal-close aria-label="button" class="close-button">
-          <img class="icon-close" src="./images/close.svg" alt="Закрити" />
+          <svg class="icon-close" width="11px" height="11px">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
         </button>
 
         <div class="title-modal">
